@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,10 @@
 
 package org.springframework.boot.autoconfigure.jms.activemq;
 
-import jakarta.jms.ConnectionFactory;
+import java.util.stream.Collectors;
+
+import javax.jms.ConnectionFactory;
+
 import org.apache.activemq.ActiveMQConnectionFactory;
 import org.apache.commons.pool2.PooledObject;
 import org.messaginghub.pooled.jms.JmsPoolConnectionFactory;
@@ -39,7 +42,6 @@ import org.springframework.jms.connection.CachingConnectionFactory;
  * @author Phillip Webb
  * @author Andy Wilkinson
  * @author Aurélien Leboulanger
- * @author Eddú Meléndez
  */
 @Configuration(proxyBeanMethods = false)
 @ConditionalOnMissingBean(ConnectionFactory.class)
@@ -53,17 +55,15 @@ class ActiveMQConnectionFactoryConfiguration {
 		@Bean
 		@ConditionalOnProperty(prefix = "spring.jms.cache", name = "enabled", havingValue = "false")
 		ActiveMQConnectionFactory jmsConnectionFactory(ActiveMQProperties properties,
-				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers,
-				ActiveMQConnectionDetails connectionDetails) {
-			return createJmsConnectionFactory(properties, factoryCustomizers, connectionDetails);
+				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers) {
+			return createJmsConnectionFactory(properties, factoryCustomizers);
 		}
 
 		private static ActiveMQConnectionFactory createJmsConnectionFactory(ActiveMQProperties properties,
-				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers,
-				ActiveMQConnectionDetails connectionDetails) {
-			return new ActiveMQConnectionFactoryFactory(properties, factoryCustomizers.orderedStream().toList(),
-					connectionDetails)
-				.createConnectionFactory(ActiveMQConnectionFactory.class);
+				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers) {
+			return new ActiveMQConnectionFactoryFactory(properties,
+					factoryCustomizers.orderedStream().collect(Collectors.toList()))
+							.createConnectionFactory(ActiveMQConnectionFactory.class);
 		}
 
 		@Configuration(proxyBeanMethods = false)
@@ -74,11 +74,10 @@ class ActiveMQConnectionFactoryConfiguration {
 
 			@Bean
 			CachingConnectionFactory jmsConnectionFactory(JmsProperties jmsProperties, ActiveMQProperties properties,
-					ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers,
-					ActiveMQConnectionDetails connectionDetails) {
+					ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers) {
 				JmsProperties.Cache cacheProperties = jmsProperties.getCache();
 				CachingConnectionFactory connectionFactory = new CachingConnectionFactory(
-						createJmsConnectionFactory(properties, factoryCustomizers, connectionDetails));
+						createJmsConnectionFactory(properties, factoryCustomizers));
 				connectionFactory.setCacheConsumers(cacheProperties.isConsumers());
 				connectionFactory.setCacheProducers(cacheProperties.isProducers());
 				connectionFactory.setSessionCacheSize(cacheProperties.getSessionCacheSize());
@@ -96,13 +95,12 @@ class ActiveMQConnectionFactoryConfiguration {
 		@Bean(destroyMethod = "stop")
 		@ConditionalOnProperty(prefix = "spring.activemq.pool", name = "enabled", havingValue = "true")
 		JmsPoolConnectionFactory jmsConnectionFactory(ActiveMQProperties properties,
-				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers,
-				ActiveMQConnectionDetails connectionDetails) {
+				ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers) {
 			ActiveMQConnectionFactory connectionFactory = new ActiveMQConnectionFactoryFactory(properties,
-					factoryCustomizers.orderedStream().toList(), connectionDetails)
-				.createConnectionFactory(ActiveMQConnectionFactory.class);
+					factoryCustomizers.orderedStream().collect(Collectors.toList()))
+							.createConnectionFactory(ActiveMQConnectionFactory.class);
 			return new JmsPoolConnectionFactoryFactory(properties.getPool())
-				.createPooledConnectionFactory(connectionFactory);
+					.createPooledConnectionFactory(connectionFactory);
 		}
 
 	}
