@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,7 +23,6 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -57,7 +56,7 @@ final class ChangeableUrls implements Iterable<URL> {
 		DevToolsSettings settings = DevToolsSettings.get();
 		List<URL> reloadableUrls = new ArrayList<>(urls.length);
 		for (URL url : urls) {
-			if ((settings.isRestartInclude(url) || isDirectoryUrl(url.toString())) && !settings.isRestartExclude(url)) {
+			if ((settings.isRestartInclude(url) || isFolderUrl(url.toString())) && !settings.isRestartExclude(url)) {
 				reloadableUrls.add(url);
 			}
 		}
@@ -67,7 +66,7 @@ final class ChangeableUrls implements Iterable<URL> {
 		this.urls = Collections.unmodifiableList(reloadableUrls);
 	}
 
-	private boolean isDirectoryUrl(String urlString) {
+	private boolean isFolderUrl(String urlString) {
 		return urlString.startsWith("file:") && urlString.endsWith("/");
 	}
 
@@ -103,12 +102,11 @@ final class ChangeableUrls implements Iterable<URL> {
 	}
 
 	private static URL[] urlsFromClassLoader(ClassLoader classLoader) {
-		if (classLoader instanceof URLClassLoader urlClassLoader) {
-			return urlClassLoader.getURLs();
+		if (classLoader instanceof URLClassLoader) {
+			return ((URLClassLoader) classLoader).getURLs();
 		}
 		return Stream.of(ManagementFactory.getRuntimeMXBean().getClassPath().split(File.pathSeparator))
-			.map(ChangeableUrls::toURL)
-			.toArray(URL[]::new);
+				.map(ChangeableUrls::toURL).toArray(URL[]::new);
 	}
 
 	private static URL toURL(String classPathEntry) {
@@ -160,7 +158,7 @@ final class ChangeableUrls implements Iterable<URL> {
 					urls.add(referenced);
 				}
 				else {
-					referenced = new URL(jarUrl, URLDecoder.decode(entry, StandardCharsets.UTF_8));
+					referenced = new URL(jarUrl, URLDecoder.decode(entry, "UTF-8"));
 					if (new File(referenced.getFile()).exists()) {
 						urls.add(referenced);
 					}
