@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,7 @@ package org.springframework.boot.configurationprocessor;
 
 import java.util.List;
 import java.util.Map;
-import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import javax.lang.model.element.AnnotationMirror;
 import javax.lang.model.element.Element;
@@ -68,7 +68,8 @@ class ConstructorParameterPropertyDescriptor extends PropertyDescriptor<Variable
 				if (defaultValue.size() == 1) {
 					return coerceValue(specificType, defaultValue.get(0));
 				}
-				return defaultValue.stream().map((value) -> coerceValue(specificType, value)).toList();
+				return defaultValue.stream().map((value) -> coerceValue(specificType, value))
+						.collect(Collectors.toList());
 			}
 			catch (IllegalArgumentException ex) {
 				environment.getMessager().printMessage(Kind.ERROR, ex.getMessage(), element, annotation);
@@ -101,18 +102,25 @@ class ConstructorParameterPropertyDescriptor extends PropertyDescriptor<Variable
 		return (coercedValue != null) ? coercedValue : value;
 	}
 
-	private static final class DefaultValueCoercionTypeVisitor extends TypeKindVisitor8<Object, String> {
+	private static class DefaultValueCoercionTypeVisitor extends TypeKindVisitor8<Object, String> {
 
 		private static final DefaultValueCoercionTypeVisitor INSTANCE = new DefaultValueCoercionTypeVisitor();
 
-		private <T extends Number> T parseNumber(String value, Function<String, T> parser,
-				PrimitiveType primitiveType) {
+		private Integer parseInteger(String value) {
 			try {
-				return parser.apply(value);
+				return Integer.valueOf(value);
 			}
 			catch (NumberFormatException ex) {
-				throw new IllegalArgumentException(
-						String.format("Invalid %s representation '%s'", primitiveType, value));
+				throw new IllegalArgumentException(String.format("Invalid number representation '%s'", value));
+			}
+		}
+
+		private Double parseFloatingPoint(String value) {
+			try {
+				return Double.valueOf(value);
+			}
+			catch (NumberFormatException ex) {
+				throw new IllegalArgumentException(String.format("Invalid floating point representation '%s'", value));
 			}
 		}
 
@@ -123,22 +131,22 @@ class ConstructorParameterPropertyDescriptor extends PropertyDescriptor<Variable
 
 		@Override
 		public Object visitPrimitiveAsByte(PrimitiveType t, String value) {
-			return parseNumber(value, Byte::parseByte, t);
+			return parseInteger(value);
 		}
 
 		@Override
 		public Object visitPrimitiveAsShort(PrimitiveType t, String value) {
-			return parseNumber(value, Short::parseShort, t);
+			return parseInteger(value);
 		}
 
 		@Override
 		public Object visitPrimitiveAsInt(PrimitiveType t, String value) {
-			return parseNumber(value, Integer::parseInt, t);
+			return parseInteger(value);
 		}
 
 		@Override
 		public Object visitPrimitiveAsLong(PrimitiveType t, String value) {
-			return parseNumber(value, Long::parseLong, t);
+			return parseInteger(value);
 		}
 
 		@Override
@@ -151,17 +159,17 @@ class ConstructorParameterPropertyDescriptor extends PropertyDescriptor<Variable
 
 		@Override
 		public Object visitPrimitiveAsFloat(PrimitiveType t, String value) {
-			return parseNumber(value, Float::parseFloat, t);
+			return parseFloatingPoint(value);
 		}
 
 		@Override
 		public Object visitPrimitiveAsDouble(PrimitiveType t, String value) {
-			return parseNumber(value, Double::parseDouble, t);
+			return parseFloatingPoint(value);
 		}
 
 	}
 
-	private static final class DefaultPrimitiveTypeVisitor extends TypeKindVisitor8<Object, Void> {
+	private static class DefaultPrimitiveTypeVisitor extends TypeKindVisitor8<Object, Void> {
 
 		private static final DefaultPrimitiveTypeVisitor INSTANCE = new DefaultPrimitiveTypeVisitor();
 
@@ -172,12 +180,12 @@ class ConstructorParameterPropertyDescriptor extends PropertyDescriptor<Variable
 
 		@Override
 		public Object visitPrimitiveAsByte(PrimitiveType t, Void ignore) {
-			return (byte) 0;
+			return 0;
 		}
 
 		@Override
 		public Object visitPrimitiveAsShort(PrimitiveType t, Void ignore) {
-			return (short) 0;
+			return 0;
 		}
 
 		@Override
@@ -197,7 +205,7 @@ class ConstructorParameterPropertyDescriptor extends PropertyDescriptor<Variable
 
 		@Override
 		public Object visitPrimitiveAsFloat(PrimitiveType t, Void ignore) {
-			return 0F;
+			return 0;
 		}
 
 		@Override
