@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,16 +16,13 @@
 
 package org.springframework.boot.gradle.tasks.run;
 
-import java.io.File;
-import java.util.Set;
+import java.lang.reflect.Method;
 
 import org.gradle.api.file.SourceDirectorySet;
-import org.gradle.api.provider.Property;
 import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.SourceSetOutput;
-import org.gradle.work.DisableCachingByDefault;
 
 /**
  * Custom {@link JavaExec} task for running a Spring Boot application.
@@ -33,21 +30,30 @@ import org.gradle.work.DisableCachingByDefault;
  * @author Andy Wilkinson
  * @since 2.0.0
  */
-@DisableCachingByDefault(because = "Application should always run")
-public abstract class BootRun extends JavaExec {
+public class BootRun extends JavaExec {
 
-	public BootRun() {
-		getOptimizedLaunch().convention(true);
+	private boolean optimizedLaunch = true;
+
+	/**
+	 * Returns {@code true} if the JVM's launch should be optimized, otherwise
+	 * {@code false}. Defaults to {@code true}.
+	 * @return whether the JVM's launch should be optimized
+	 * @since 2.2.0
+	 */
+	@Input
+	public boolean isOptimizedLaunch() {
+		return this.optimizedLaunch;
 	}
 
 	/**
-	 * Returns the property for whether the JVM's launch should be optimized. The property
-	 * defaults to {@code true}.
-	 * @return whether the JVM's launch should be optimized
-	 * @since 3.0.0
+	 * Sets whether the JVM's launch should be optimized. Defaults to {@code true}.
+	 * @param optimizedLaunch {@code true} if the JVM's launch should be optimised,
+	 * otherwise {@code false}
+	 * @since 2.2.0
 	 */
-	@Input
-	public abstract Property<Boolean> getOptimizedLaunch();
+	public void setOptimizedLaunch(boolean optimizedLaunch) {
+		this.optimizedLaunch = optimizedLaunch;
+	}
 
 	/**
 	 * Adds the {@link SourceDirectorySet#getSrcDirs() source directories} of the given
@@ -57,22 +63,33 @@ public abstract class BootRun extends JavaExec {
 	 * @param sourceSet the source set
 	 */
 	public void sourceResources(SourceSet sourceSet) {
-		File resourcesDir = sourceSet.getOutput().getResourcesDir();
-		Set<File> srcDirs = sourceSet.getResources().getSrcDirs();
-		setClasspath(getProject().files(srcDirs, getClasspath()).filter((file) -> !file.equals(resourcesDir)));
+		setClasspath(getProject().files(sourceSet.getResources().getSrcDirs(), getClasspath())
+				.filter((file) -> !file.equals(sourceSet.getOutput().getResourcesDir())));
 	}
 
 	@Override
 	public void exec() {
-		if (getOptimizedLaunch().get()) {
+		if (this.optimizedLaunch) {
 			setJvmArgs(getJvmArgs());
+			if (!isJava13OrLater()) {
+				jvmArgs("-Xverify:none");
+			}
 			jvmArgs("-XX:TieredStopAtLevel=1");
 		}
 		if (System.console() != null) {
 			// Record that the console is available here for AnsiOutput to detect later
-			getEnvironment().put("spring.output.ansi.console-available", true);
+			this.getEnvironment().put("spring.output.ansi.console-available", true);
 		}
 		super.exec();
+	}
+
+	private boolean isJava13OrLater() {
+		for (Method method : String.class.getMethods()) {
+			if (method.getName().equals("stripIndent")) {
+				return true;
+			}
+		}
+		return false;
 	}
 
 }
