@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,20 +30,15 @@ import java.util.function.Consumer;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.PropertyEditorRegistry;
 import org.springframework.beans.SimpleTypeConverter;
-import org.springframework.beans.propertyeditors.CustomBooleanEditor;
-import org.springframework.beans.propertyeditors.CustomNumberEditor;
 import org.springframework.beans.propertyeditors.FileEditor;
 import org.springframework.boot.convert.ApplicationConversionService;
 import org.springframework.core.ResolvableType;
 import org.springframework.core.convert.ConversionException;
-import org.springframework.core.convert.ConversionFailedException;
 import org.springframework.core.convert.ConversionService;
-import org.springframework.core.convert.ConverterNotFoundException;
 import org.springframework.core.convert.TypeDescriptor;
 import org.springframework.core.convert.converter.ConditionalGenericConverter;
 import org.springframework.core.convert.support.GenericConversionService;
-import org.springframework.core.io.Resource;
-import org.springframework.util.CollectionUtils;
+import org.springframework.util.Assert;
 
 /**
  * Utility to handle any conversion needed during binding. This class is not thread-safe
@@ -54,86 +49,64 @@ import org.springframework.util.CollectionUtils;
  */
 final class BindConverter {
 
+	private static final Set<Class<?>> EXCLUDED_EDITORS;
+	static {
+		Set<Class<?>> excluded = new HashSet<>();
+		excluded.add(FileEditor.class); // gh-12163
+		EXCLUDED_EDITORS = Collections.unmodifiableSet(excluded);
+	}
+
 	private static BindConverter sharedInstance;
 
-	private final List<ConversionService> delegates;
+	private final ConversionService conversionService;
 
-	private BindConverter(List<ConversionService> conversionServices,
+	private BindConverter(ConversionService conversionService,
 			Consumer<PropertyEditorRegistry> propertyEditorInitializer) {
-		List<ConversionService> delegates = new ArrayList<>();
-		delegates.add(new TypeConverterConversionService(propertyEditorInitializer));
-		boolean hasApplication = false;
-		if (!CollectionUtils.isEmpty(conversionServices)) {
-			for (ConversionService conversionService : conversionServices) {
-				delegates.add(conversionService);
-				hasApplication = hasApplication || conversionService instanceof ApplicationConversionService;
-			}
-		}
-		if (!hasApplication) {
-			delegates.add(ApplicationConversionService.getSharedInstance());
-		}
-		this.delegates = Collections.unmodifiableList(delegates);
+		Assert.notNull(conversionService, "ConversionService must not be null");
+		List<ConversionService> conversionServices = getConversionServices(conversionService,
+				propertyEditorInitializer);
+		this.conversionService = new CompositeConversionService(conversionServices);
 	}
 
-	boolean canConvert(Object source, ResolvableType targetType, Annotation... targetAnnotations) {
-		return canConvert(TypeDescriptor.forObject(source),
-				new ResolvableTypeDescriptor(targetType, targetAnnotations));
-	}
-
-	private boolean canConvert(TypeDescriptor sourceType, TypeDescriptor targetType) {
-		for (ConversionService service : this.delegates) {
-			if (service.canConvert(sourceType, targetType)) {
-				return true;
-			}
+	private List<ConversionService> getConversionServices(ConversionService conversionService,
+			Consumer<PropertyEditorRegistry> propertyEditorInitializer) {
+		List<ConversionService> services = new ArrayList<>();
+		services.add(new TypeConverterConversionService(propertyEditorInitializer));
+		services.add(conversionService);
+		if (!(conversionService instanceof ApplicationConversionService)) {
+			services.add(ApplicationConversionService.getSharedInstance());
 		}
-		return false;
+		return services;
 	}
 
-	<T> T convert(Object source, Bindable<T> target) {
-		return convert(source, target.getType(), target.getAnnotations());
+	boolean canConvert(Object value, ResolvableType type, Annotation... annotations) {
+		return this.conversionService.canConvert(TypeDescriptor.forObject(value),
+				new ResolvableTypeDescriptor(type, annotations));
+	}
+
+	<T> T convert(Object result, Bindable<T> target) {
+		return convert(result, target.getType(), target.getAnnotations());
 	}
 
 	@SuppressWarnings("unchecked")
-	<T> T convert(Object source, ResolvableType targetType, Annotation... targetAnnotations) {
-		if (source == null) {
+	<T> T convert(Object value, ResolvableType type, Annotation... annotations) {
+		if (value == null) {
 			return null;
 		}
-		return (T) convert(source, TypeDescriptor.forObject(source),
-				new ResolvableTypeDescriptor(targetType, targetAnnotations));
+		return (T) this.conversionService.convert(value, TypeDescriptor.forObject(value),
+				new ResolvableTypeDescriptor(type, annotations));
 	}
 
-	private Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
-		ConversionException failure = null;
-		for (ConversionService delegate : this.delegates) {
-			try {
-				if (delegate.canConvert(sourceType, targetType)) {
-					return delegate.convert(source, sourceType, targetType);
-				}
-			}
-			catch (ConversionException ex) {
-				if (failure == null && ex instanceof ConversionFailedException) {
-					failure = ex;
-				}
-			}
-		}
-		throw (failure != null) ? failure : new ConverterNotFoundException(sourceType, targetType);
-	}
-
-	static BindConverter get(List<ConversionService> conversionServices,
+	static BindConverter get(ConversionService conversionService,
 			Consumer<PropertyEditorRegistry> propertyEditorInitializer) {
-		boolean sharedApplicationConversionService = (conversionServices == null) || (conversionServices.size() == 1
-				&& conversionServices.get(0) == ApplicationConversionService.getSharedInstance());
-		if (propertyEditorInitializer == null && sharedApplicationConversionService) {
-			return getSharedInstance();
+		if (conversionService == ApplicationConversionService.getSharedInstance()
+				&& propertyEditorInitializer == null) {
+			if (sharedInstance == null) {
+				sharedInstance = new BindConverter(conversionService, propertyEditorInitializer);
+			}
+			return sharedInstance;
 		}
-		return new BindConverter(conversionServices, propertyEditorInitializer);
-	}
-
-	private static BindConverter getSharedInstance() {
-		if (sharedInstance == null) {
-			sharedInstance = new BindConverter(null, null);
-		}
-		return sharedInstance;
+		return new BindConverter(conversionService, propertyEditorInitializer);
 	}
 
 	/**
@@ -148,6 +121,58 @@ final class BindConverter {
 	}
 
 	/**
+	 * Composite {@link ConversionService} used to call multiple services.
+	 */
+	static class CompositeConversionService implements ConversionService {
+
+		private final List<ConversionService> delegates;
+
+		CompositeConversionService(List<ConversionService> delegates) {
+			this.delegates = delegates;
+		}
+
+		@Override
+		public boolean canConvert(Class<?> sourceType, Class<?> targetType) {
+			Assert.notNull(targetType, "Target type to convert to cannot be null");
+			return canConvert((sourceType != null) ? TypeDescriptor.valueOf(sourceType) : null,
+					TypeDescriptor.valueOf(targetType));
+		}
+
+		@Override
+		public boolean canConvert(TypeDescriptor sourceType, TypeDescriptor targetType) {
+			for (ConversionService service : this.delegates) {
+				if (service.canConvert(sourceType, targetType)) {
+					return true;
+				}
+			}
+			return false;
+		}
+
+		@Override
+		@SuppressWarnings("unchecked")
+		public <T> T convert(Object source, Class<T> targetType) {
+			Assert.notNull(targetType, "Target type to convert to cannot be null");
+			return (T) convert(source, TypeDescriptor.forObject(source), TypeDescriptor.valueOf(targetType));
+		}
+
+		@Override
+		public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
+			for (int i = 0; i < this.delegates.size() - 1; i++) {
+				try {
+					ConversionService delegate = this.delegates.get(i);
+					if (delegate.canConvert(sourceType, targetType)) {
+						return delegate.convert(source, sourceType, targetType);
+					}
+				}
+				catch (ConversionException ex) {
+				}
+			}
+			return this.delegates.get(this.delegates.size() - 1).convert(source, sourceType, targetType);
+		}
+
+	}
+
+	/**
 	 * A {@link ConversionService} implementation that delegates to a
 	 * {@link SimpleTypeConverter}. Allows {@link PropertyEditor} based conversion for
 	 * simple types, arrays and collections.
@@ -155,13 +180,21 @@ final class BindConverter {
 	private static class TypeConverterConversionService extends GenericConversionService {
 
 		TypeConverterConversionService(Consumer<PropertyEditorRegistry> initializer) {
+			addConverter(new TypeConverterConverter(createTypeConverter(initializer)));
 			ApplicationConversionService.addDelimitedStringConverters(this);
-			addConverter(new TypeConverterConverter(initializer));
+		}
+
+		private SimpleTypeConverter createTypeConverter(Consumer<PropertyEditorRegistry> initializer) {
+			SimpleTypeConverter typeConverter = new SimpleTypeConverter();
+			if (initializer != null) {
+				initializer.accept(typeConverter);
+			}
+			return typeConverter;
 		}
 
 		@Override
 		public boolean canConvert(TypeDescriptor sourceType, TypeDescriptor targetType) {
-			// Prefer conversion service to handle things like String to char[].
+			// Prefer conversion services to handle things like String to char[].
 			if (targetType.isArray() && targetType.getElementTypeDescriptor().isPrimitive()) {
 				return false;
 			}
@@ -175,66 +208,45 @@ final class BindConverter {
 	 */
 	private static class TypeConverterConverter implements ConditionalGenericConverter {
 
-		private static final Set<Class<?>> EXCLUDED_EDITORS;
-		static {
-			Set<Class<?>> excluded = new HashSet<>();
-			excluded.add(CustomNumberEditor.class);
-			excluded.add(CustomBooleanEditor.class);
-			excluded.add(FileEditor.class);
-			EXCLUDED_EDITORS = Collections.unmodifiableSet(excluded);
-		}
+		private final SimpleTypeConverter typeConverter;
 
-		private final Consumer<PropertyEditorRegistry> initializer;
-
-		// SimpleTypeConverter is not thread-safe to use for conversion but we can use it
-		// in a thread-safe way to check if conversion is possible.
-		private final SimpleTypeConverter matchesOnlyTypeConverter;
-
-		TypeConverterConverter(Consumer<PropertyEditorRegistry> initializer) {
-			this.initializer = initializer;
-			this.matchesOnlyTypeConverter = createTypeConverter();
+		TypeConverterConverter(SimpleTypeConverter typeConverter) {
+			this.typeConverter = typeConverter;
 		}
 
 		@Override
 		public Set<ConvertiblePair> getConvertibleTypes() {
-			return Set.of(new ConvertiblePair(String.class, Object.class),
-					new ConvertiblePair(String.class, Resource[].class),
-					new ConvertiblePair(String.class, Collection.class));
+			return Collections.singleton(new ConvertiblePair(String.class, Object.class));
 		}
 
 		@Override
 		public boolean matches(TypeDescriptor sourceType, TypeDescriptor targetType) {
-			Class<?> type = targetType.getType();
-			if (type == null || type == Object.class || Map.class.isAssignableFrom(type)) {
-				return false;
-			}
-			if (Collection.class.isAssignableFrom(type)) {
-				TypeDescriptor elementType = targetType.getElementTypeDescriptor();
-				if (elementType == null || (!Resource.class.isAssignableFrom(elementType.getType()))) {
-					return false;
-				}
-			}
-			PropertyEditor editor = this.matchesOnlyTypeConverter.getDefaultEditor(type);
-			if (editor == null) {
-				editor = this.matchesOnlyTypeConverter.findCustomEditor(type, null);
-			}
-			if (editor == null && String.class != type) {
-				editor = BeanUtils.findEditorByConvention(type);
-			}
-			return (editor != null && !EXCLUDED_EDITORS.contains(editor.getClass()));
+			return getPropertyEditor(targetType.getType()) != null;
 		}
 
 		@Override
 		public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
-			return createTypeConverter().convertIfNecessary(source, targetType.getType(), targetType);
+			SimpleTypeConverter typeConverter = this.typeConverter;
+			return typeConverter.convertIfNecessary(source, targetType.getType());
 		}
 
-		private SimpleTypeConverter createTypeConverter() {
-			SimpleTypeConverter typeConverter = new SimpleTypeConverter();
-			if (this.initializer != null) {
-				this.initializer.accept(typeConverter);
+		private PropertyEditor getPropertyEditor(Class<?> type) {
+			if (type == null || type == Object.class || Collection.class.isAssignableFrom(type)
+					|| Map.class.isAssignableFrom(type)) {
+				return null;
 			}
-			return typeConverter;
+			SimpleTypeConverter typeConverter = this.typeConverter;
+			PropertyEditor editor = typeConverter.getDefaultEditor(type);
+			if (editor == null) {
+				editor = typeConverter.findCustomEditor(type, null);
+			}
+			if (editor == null && String.class != type) {
+				editor = BeanUtils.findEditorByConvention(type);
+			}
+			if (editor == null || EXCLUDED_EDITORS.contains(editor.getClass())) {
+				return null;
+			}
+			return editor;
 		}
 
 	}
