@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,19 +21,15 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Deque;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
 import java.util.function.Consumer;
-import java.util.function.Function;
 import java.util.function.Supplier;
 
 import org.springframework.beans.PropertyEditorRegistry;
 import org.springframework.beans.factory.config.ConfigurableListableBeanFactory;
-import org.springframework.boot.context.properties.bind.Bindable.BindRestriction;
 import org.springframework.boot.context.properties.source.ConfigurationProperty;
 import org.springframework.boot.context.properties.source.ConfigurationPropertyName;
 import org.springframework.boot.context.properties.source.ConfigurationPropertySource;
@@ -57,17 +53,19 @@ import org.springframework.util.Assert;
 public class Binder {
 
 	private static final Set<Class<?>> NON_BEAN_CLASSES = Collections
-		.unmodifiableSet(new HashSet<>(Arrays.asList(Object.class, Class.class)));
+			.unmodifiableSet(new HashSet<>(Arrays.asList(Object.class, Class.class)));
 
 	private final Iterable<ConfigurationPropertySource> sources;
 
 	private final PlaceholdersResolver placeholdersResolver;
 
-	private final BindConverter bindConverter;
+	private final ConversionService conversionService;
+
+	private final Consumer<PropertyEditorRegistry> propertyEditorInitializer;
 
 	private final BindHandler defaultBindHandler;
 
-	private final Map<BindMethod, List<DataObjectBinder>> dataObjectBinders;
+	private final List<DataObjectBinder> dataObjectBinders;
 
 	/**
 	 * Create a new {@link Binder} instance for the specified sources. A
@@ -75,7 +73,7 @@ public class Binder {
 	 * @param sources the sources used for binding
 	 */
 	public Binder(ConfigurationPropertySource... sources) {
-		this((sources != null) ? Arrays.asList(sources) : null, null, null, null);
+		this(Arrays.asList(sources), null, null, null);
 	}
 
 	/**
@@ -100,7 +98,7 @@ public class Binder {
 	 * Create a new {@link Binder} instance for the specified sources.
 	 * @param sources the sources used for binding
 	 * @param placeholdersResolver strategy to resolve any property placeholders
-	 * @param conversionService the conversion service to convert values (or {@code null}
+	 * @param conversionService the conversion services to convert values (or {@code null}
 	 * to use {@link ApplicationConversionService})
 	 */
 	public Binder(Iterable<ConfigurationPropertySource> sources, PlaceholdersResolver placeholdersResolver,
@@ -112,7 +110,7 @@ public class Binder {
 	 * Create a new {@link Binder} instance for the specified sources.
 	 * @param sources the sources used for binding
 	 * @param placeholdersResolver strategy to resolve any property placeholders
-	 * @param conversionService the conversion service to convert values (or {@code null}
+	 * @param conversionService the conversion services to convert values (or {@code null}
 	 * to use {@link ApplicationConversionService})
 	 * @param propertyEditorInitializer initializer used to configure the property editors
 	 * that can convert values (or {@code null} if no initialization is required). Often
@@ -127,7 +125,7 @@ public class Binder {
 	 * Create a new {@link Binder} instance for the specified sources.
 	 * @param sources the sources used for binding
 	 * @param placeholdersResolver strategy to resolve any property placeholders
-	 * @param conversionService the conversion service to convert values (or {@code null}
+	 * @param conversionService the conversion services to convert values (or {@code null}
 	 * to use {@link ApplicationConversionService})
 	 * @param propertyEditorInitializer initializer used to configure the property editors
 	 * that can convert values (or {@code null} if no initialization is required). Often
@@ -146,7 +144,7 @@ public class Binder {
 	 * Create a new {@link Binder} instance for the specified sources.
 	 * @param sources the sources used for binding
 	 * @param placeholdersResolver strategy to resolve any property placeholders
-	 * @param conversionService the conversion service to convert values (or {@code null}
+	 * @param conversionService the conversion services to convert values (or {@code null}
 	 * to use {@link ApplicationConversionService})
 	 * @param propertyEditorInitializer initializer used to configure the property editors
 	 * that can convert values (or {@code null} if no initialization is required). Often
@@ -160,48 +158,19 @@ public class Binder {
 	public Binder(Iterable<ConfigurationPropertySource> sources, PlaceholdersResolver placeholdersResolver,
 			ConversionService conversionService, Consumer<PropertyEditorRegistry> propertyEditorInitializer,
 			BindHandler defaultBindHandler, BindConstructorProvider constructorProvider) {
-		this(sources, placeholdersResolver,
-				(conversionService != null) ? Collections.singletonList(conversionService)
-						: (List<ConversionService>) null,
-				propertyEditorInitializer, defaultBindHandler, constructorProvider);
-	}
-
-	/**
-	 * Create a new {@link Binder} instance for the specified sources.
-	 * @param sources the sources used for binding
-	 * @param placeholdersResolver strategy to resolve any property placeholders
-	 * @param conversionServices the conversion services to convert values (or
-	 * {@code null} to use {@link ApplicationConversionService})
-	 * @param propertyEditorInitializer initializer used to configure the property editors
-	 * that can convert values (or {@code null} if no initialization is required). Often
-	 * used to call {@link ConfigurableListableBeanFactory#copyRegisteredEditorsTo}.
-	 * @param defaultBindHandler the default bind handler to use if none is specified when
-	 * binding
-	 * @param constructorProvider the constructor provider which provides the bind
-	 * constructor to use when binding
-	 * @since 2.5.0
-	 */
-	public Binder(Iterable<ConfigurationPropertySource> sources, PlaceholdersResolver placeholdersResolver,
-			List<ConversionService> conversionServices, Consumer<PropertyEditorRegistry> propertyEditorInitializer,
-			BindHandler defaultBindHandler, BindConstructorProvider constructorProvider) {
 		Assert.notNull(sources, "Sources must not be null");
-		for (ConfigurationPropertySource source : sources) {
-			Assert.notNull(source, "Sources must not contain null elements");
-		}
 		this.sources = sources;
 		this.placeholdersResolver = (placeholdersResolver != null) ? placeholdersResolver : PlaceholdersResolver.NONE;
-		this.bindConverter = BindConverter.get(conversionServices, propertyEditorInitializer);
+		this.conversionService = (conversionService != null) ? conversionService
+				: ApplicationConversionService.getSharedInstance();
+		this.propertyEditorInitializer = propertyEditorInitializer;
 		this.defaultBindHandler = (defaultBindHandler != null) ? defaultBindHandler : BindHandler.DEFAULT;
 		if (constructorProvider == null) {
 			constructorProvider = BindConstructorProvider.DEFAULT;
 		}
 		ValueObjectBinder valueObjectBinder = new ValueObjectBinder(constructorProvider);
 		JavaBeanBinder javaBeanBinder = JavaBeanBinder.INSTANCE;
-		Map<BindMethod, List<DataObjectBinder>> dataObjectBinders = new HashMap<>();
-		dataObjectBinders.put(BindMethod.VALUE_OBJECT, List.of(valueObjectBinder));
-		dataObjectBinders.put(BindMethod.JAVA_BEAN, List.of(javaBeanBinder));
-		dataObjectBinders.put(null, List.of(valueObjectBinder, javaBeanBinder));
-		this.dataObjectBinders = Collections.unmodifiableMap(dataObjectBinders);
+		this.dataObjectBinders = Collections.unmodifiableList(Arrays.asList(valueObjectBinder, javaBeanBinder));
 	}
 
 	/**
@@ -341,6 +310,7 @@ public class Binder {
 
 	private <T> T bind(ConfigurationPropertyName name, Bindable<T> target, BindHandler handler, Context context,
 			boolean allowRecursiveBinding, boolean create) {
+		context.clearConfigurationProperty();
 		try {
 			Bindable<T> replacementTarget = handler.onStart(name, target, context);
 			if (replacementTarget == null) {
@@ -362,20 +332,23 @@ public class Binder {
 			result = context.getConverter().convert(result, target);
 		}
 		if (result == null && create) {
-			result = fromDataObjectBinders(target.getBindMethod(),
-					(dataObjectBinder) -> dataObjectBinder.create(target, context));
+			result = create(target, context);
 			result = handler.onCreate(name, target, context, result);
 			result = context.getConverter().convert(result, target);
-			if (result == null) {
-				IllegalStateException ex = new IllegalStateException(
-						"Unable to create instance for " + target.getType());
-				this.dataObjectBinders.get(target.getBindMethod())
-					.forEach((dataObjectBinder) -> dataObjectBinder.onUnableToCreateInstance(target, context, ex));
-				throw ex;
-			}
+			Assert.state(result != null, () -> "Unable to create instance for " + target.getType());
 		}
 		handler.onFinish(name, target, context, result);
 		return context.getConverter().convert(result, target);
+	}
+
+	private Object create(Bindable<?> target, Context context) {
+		for (DataObjectBinder dataObjectBinder : this.dataObjectBinders) {
+			Object instance = dataObjectBinder.create(target, context);
+			if (instance != null) {
+				return instance;
+			}
+		}
+		return null;
 	}
 
 	private <T> T handleBindError(ConfigurationPropertyName name, Bindable<T> target, BindHandler handler,
@@ -385,8 +358,8 @@ public class Binder {
 			return context.getConverter().convert(result, target);
 		}
 		catch (Exception ex) {
-			if (ex instanceof BindException bindException) {
-				throw bindException;
+			if (ex instanceof BindException) {
+				throw (BindException) ex;
 			}
 			throw new BindException(name, target, context.getConfigurationProperty(), ex);
 		}
@@ -394,8 +367,8 @@ public class Binder {
 
 	private <T> Object bindObject(ConfigurationPropertyName name, Bindable<T> target, BindHandler handler,
 			Context context, boolean allowRecursiveBinding) {
-		ConfigurationProperty property = findProperty(name, target, context);
-		if (property == null && context.depth != 0 && containsNoDescendantOf(context.getSources(), name)) {
+		ConfigurationProperty property = findProperty(name, context);
+		if (property == null && containsNoDescendantOf(context.getSources(), name) && context.depth != 0) {
 			return null;
 		}
 		AggregateBinder<?> aggregateBinder = getAggregateBinder(target, context);
@@ -442,9 +415,8 @@ public class Binder {
 		return context.withIncreasedDepth(() -> aggregateBinder.bind(name, target, elementBinder));
 	}
 
-	private <T> ConfigurationProperty findProperty(ConfigurationPropertyName name, Bindable<T> target,
-			Context context) {
-		if (name.isEmpty() || target.hasBindRestriction(BindRestriction.NO_DIRECT_PROPERTY)) {
+	private ConfigurationProperty findProperty(ConfigurationPropertyName name, Context context) {
+		if (name.isEmpty()) {
 			return null;
 		}
 		for (ConfigurationPropertySource source : context.getSources()) {
@@ -470,23 +442,20 @@ public class Binder {
 			return null;
 		}
 		Class<?> type = target.getType().resolve(Object.class);
-		BindMethod bindMethod = target.getBindMethod();
 		if (!allowRecursiveBinding && context.isBindingDataObject(type)) {
 			return null;
 		}
 		DataObjectPropertyBinder propertyBinder = (propertyName, propertyTarget) -> bind(name.append(propertyName),
 				propertyTarget, handler, context, false, false);
-		return context.withDataObject(type, () -> fromDataObjectBinders(bindMethod,
-				(dataObjectBinder) -> dataObjectBinder.bind(name, target, context, propertyBinder)));
-	}
-
-	private Object fromDataObjectBinders(BindMethod bindMethod, Function<DataObjectBinder, Object> operation) {
-		return this.dataObjectBinders.get(bindMethod)
-			.stream()
-			.map(operation)
-			.filter(Objects::nonNull)
-			.findFirst()
-			.orElse(null);
+		return context.withDataObject(type, () -> {
+			for (DataObjectBinder dataObjectBinder : this.dataObjectBinders) {
+				Object instance = dataObjectBinder.bind(name, target, context, propertyBinder);
+				if (instance != null) {
+					return instance;
+				}
+			}
+			return null;
+		});
 	}
 
 	private boolean isUnbindableBean(ConfigurationPropertyName name, Bindable<?> target, Context context) {
@@ -543,6 +512,8 @@ public class Binder {
 	 */
 	final class Context implements BindContext {
 
+		private final BindConverter converter;
+
 		private int depth;
 
 		private final List<ConfigurationPropertySource> source = Arrays.asList((ConfigurationPropertySource) null);
@@ -554,6 +525,10 @@ public class Binder {
 		private final Deque<Class<?>> constructorBindings = new ArrayDeque<>();
 
 		private ConfigurationProperty configurationProperty;
+
+		Context() {
+			this.converter = BindConverter.get(Binder.this.conversionService, Binder.this.propertyEditorInitializer);
+		}
 
 		private void increaseDepth() {
 			this.depth++;
@@ -601,7 +576,7 @@ public class Binder {
 			}
 		}
 
-		void setConfigurationProperty(ConfigurationProperty configurationProperty) {
+		private void setConfigurationProperty(ConfigurationProperty configurationProperty) {
 			this.configurationProperty = configurationProperty;
 		}
 
@@ -626,7 +601,7 @@ public class Binder {
 		}
 
 		BindConverter getConverter() {
-			return Binder.this.bindConverter;
+			return this.converter;
 		}
 
 		@Override
