@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -27,9 +27,9 @@ import java.util.Properties;
 import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
+import org.mockito.Answers;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InOrder;
-import org.mockito.invocation.InvocationOnMock;
-import org.mockito.stubbing.Answer;
 
 import org.springframework.boot.context.properties.bind.BinderTests.ExampleEnum;
 import org.springframework.boot.context.properties.bind.BinderTests.JavaBean;
@@ -48,10 +48,8 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.entry;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.assertArg;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.isA;
-import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.mock;
 
@@ -131,8 +129,7 @@ class MapBinderTests {
 		source.put("faf.far.bin", "x");
 		this.sources.add(source);
 		Map<String, Map<String, Integer>> result = this.binder
-			.bind("foo", Bindable.<Map<String, Map<String, Integer>>>of(type))
-			.get();
+				.bind("foo", Bindable.<Map<String, Map<String, Integer>>>of(type)).get();
 		assertThat(result).hasSize(2);
 		assertThat(result.get("bar")).containsEntry("baz", 1).containsEntry("bin", 2);
 		assertThat(result.get("far")).containsEntry("baz", 3).containsEntry("bin", 4);
@@ -186,9 +183,9 @@ class MapBinderTests {
 		source.put("foo", "bar");
 		this.sources.add(source);
 		Map<String, Object> result = this.binder.bind("", Bindable.mapOf(String.class, Object.class)).get();
-		assertThat(result).containsEntry("commit", Collections.singletonMap("id", "abcdefg"));
-		assertThat(result).containsEntry("branch", "master");
-		assertThat(result).containsEntry("foo", "bar");
+		assertThat(result.get("commit")).isEqualTo(Collections.singletonMap("id", "abcdefg"));
+		assertThat(result.get("branch")).isEqualTo("master");
+		assertThat(result.get("foo")).isEqualTo("bar");
 	}
 
 	@Test
@@ -302,7 +299,7 @@ class MapBinderTests {
 		source.put("foo.ccc.ddd.eee", "bazboo");
 		this.sources.add(source);
 		Map<String, ExampleEnum> result = this.binder.bind("foo", Bindable.mapOf(String.class, ExampleEnum.class))
-			.get();
+				.get();
 		assertThat(result).hasSize(3);
 		assertThat(result).containsEntry("aaa.bbb.ccc", ExampleEnum.FOO_BAR);
 		assertThat(result).containsEntry("bbb.ccc.ddd", ExampleEnum.BAR_BAZ);
@@ -317,7 +314,7 @@ class MapBinderTests {
 		this.sources.add(source);
 		this.binder = new Binder(this.sources, new PropertySourcesPlaceholdersResolver(environment));
 		Map<String, ExampleEnum> result = this.binder.bind("foo", Bindable.mapOf(String.class, ExampleEnum.class))
-			.get();
+				.get();
 		assertThat(result).containsEntry("aaa.bbb.ccc", ExampleEnum.BAZ_BOO);
 	}
 
@@ -332,25 +329,26 @@ class MapBinderTests {
 	@Test
 	void bindToMapShouldTriggerOnSuccess() {
 		this.sources.add(new MockConfigurationPropertySource("foo.bar", "1", "line1"));
-		BindHandler handler = mockBindHandler();
+		BindHandler handler = mock(BindHandler.class, Answers.CALLS_REAL_METHODS);
 		Bindable<Map<String, Integer>> target = STRING_INTEGER_MAP;
 		this.binder.bind("foo", target, handler);
 		InOrder ordered = inOrder(handler);
-		ordered.verify(handler)
-			.onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(Integer.class)), any(), eq(1));
+		ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(Integer.class)),
+				any(), eq(1));
 		ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo")), eq(target), any(), isA(Map.class));
 	}
 
 	@Test
 	void bindToMapStringArrayShouldTriggerOnSuccess() {
 		this.sources.add(new MockConfigurationPropertySource("foo.bar", "a,b,c", "line1"));
-		BindHandler handler = mockBindHandler();
+		BindHandler handler = mock(BindHandler.class, Answers.CALLS_REAL_METHODS);
 		Bindable<Map<String, String[]>> target = STRING_ARRAY_MAP;
 		this.binder.bind("foo", target, handler);
 		InOrder ordered = inOrder(handler);
-		ordered.verify(handler)
-			.onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(String[].class)), any(),
-					assertArg((array) -> assertThat((String[]) array).containsExactly("a", "b", "c")));
+		ArgumentCaptor<String[]> array = ArgumentCaptor.forClass(String[].class);
+		ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(String[].class)),
+				any(), array.capture());
+		assertThat(array.getValue()).containsExactly("a", "b", "c");
 		ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo")), eq(target), any(), isA(Map.class));
 	}
 
@@ -364,7 +362,7 @@ class MapBinderTests {
 		source.put("foo.bar[2].value", "c");
 		this.sources.add(source);
 		Map<String, List<JavaBean>> map = this.binder.bind("foo", target).get();
-		List<String> values = map.get("bar").stream().map(JavaBean::getValue).toList();
+		List<String> values = map.get("bar").stream().map(JavaBean::getValue).collect(Collectors.toList());
 		assertThat(values).containsExactly("a", "b", "c");
 
 	}
@@ -429,7 +427,7 @@ class MapBinderTests {
 		mockSource.put("foo.bar.baz[2].value", "c");
 		this.sources.add(mockSource);
 		Map<String, List<JavaBean>> map = this.binder.bind("foo", target).get();
-		List<String> values = map.get("bar.baz").stream().map(JavaBean::getValue).toList();
+		List<String> values = map.get("bar.baz").stream().map(JavaBean::getValue).collect(Collectors.toList());
 		assertThat(values).containsExactly("a", "b", "c");
 	}
 
@@ -503,8 +501,8 @@ class MapBinderTests {
 		source.put("foo", "a,b");
 		this.sources.add(source);
 		Map<String, String> map = binder.bind("foo", STRING_STRING_MAP).get();
-		assertThat(map).containsKey("a");
-		assertThat(map).containsKey("b");
+		assertThat(map.get("a")).isNotNull();
+		assertThat(map.get("b")).isNotNull();
 	}
 
 	@Test
@@ -519,8 +517,8 @@ class MapBinderTests {
 		source.put("foo.b", "b");
 		this.sources.add(source);
 		Map<String, String> map = binder.bind("foo", STRING_STRING_MAP).get();
-		assertThat(map).containsEntry("a", "a");
-		assertThat(map).containsEntry("b", "b");
+		assertThat(map.get("a")).isEqualTo("a");
+		assertThat(map.get("b")).isEqualTo("b");
 	}
 
 	@Test
@@ -559,8 +557,7 @@ class MapBinderTests {
 		source.put("foo.items.a", "b");
 		this.sources.add(source);
 		ExampleCustomNoDefaultConstructorBean result = this.binder
-			.bind("foo", ExampleCustomNoDefaultConstructorBean.class)
-			.get();
+				.bind("foo", ExampleCustomNoDefaultConstructorBean.class).get();
 		assertThat(result.getItems()).containsOnly(entry("foo", "bar"), entry("a", "b"));
 	}
 
@@ -571,8 +568,7 @@ class MapBinderTests {
 		source.put("foo.items.a", "b");
 		this.sources.add(source);
 		ExampleCustomWithDefaultConstructorBean result = this.binder
-			.bind("foo", ExampleCustomWithDefaultConstructorBean.class)
-			.get();
+				.bind("foo", ExampleCustomWithDefaultConstructorBean.class).get();
 		assertThat(result.getItems()).containsExactly(entry("a", "b"));
 	}
 
@@ -583,8 +579,7 @@ class MapBinderTests {
 		source.put("foo.values.e", "f");
 		this.sources.add(source);
 		Map<String, String> result = this.binder
-			.bind("foo.values", STRING_STRING_MAP.withExistingValue(Collections.singletonMap("a", "b")))
-			.get();
+				.bind("foo.values", STRING_STRING_MAP.withExistingValue(Collections.singletonMap("a", "b"))).get();
 		assertThat(result).hasSize(3);
 		assertThat(result).containsExactly(entry("a", "b"), entry("c", "d"), entry("e", "f"));
 	}
@@ -607,21 +602,7 @@ class MapBinderTests {
 		this.sources.add(source);
 		MapWithWildcardProperties result = this.binder.bind("foo", Bindable.of(MapWithWildcardProperties.class)).get();
 		assertThat(result.getAddresses().get("localhost").stream().map(InetAddress::getHostAddress))
-			.containsExactly("127.0.0.1", "127.0.0.2");
-	}
-
-	@Test
-	void bindToMapWithPlaceholdersShouldResolve() {
-		DefaultConversionService conversionService = new DefaultConversionService();
-		conversionService.addConverter(new MapConverter());
-		StandardEnvironment environment = new StandardEnvironment();
-		Binder binder = new Binder(this.sources, new PropertySourcesPlaceholdersResolver(environment),
-				conversionService, null, null);
-		TestPropertySourceUtils.addInlinedPropertiesToEnvironment(environment, "bar=bc");
-		this.sources.add(new MockConfigurationPropertySource("foo", "a${bar},${bar}d"));
-		Map<String, String> map = binder.bind("foo", STRING_STRING_MAP).get();
-		assertThat(map).containsKey("abc");
-		assertThat(map).containsKey("bcd");
+				.containsExactly("127.0.0.1", "127.0.0.2");
 	}
 
 	private <K, V> Bindable<Map<K, V>> getMapBindable(Class<K> keyGeneric, ResolvableType valueType) {
@@ -631,14 +612,6 @@ class MapBinderTests {
 
 	private <T> Bindable<List<T>> getListBindable(ResolvableType type) {
 		return Bindable.of(ResolvableType.forClassWithGenerics(List.class, type));
-	}
-
-	private BindHandler mockBindHandler() {
-		BindHandler handler = mock(BindHandler.class);
-		given(handler.onStart(any(), any(), any())).willAnswer(InvocationArgument.index(1));
-		given(handler.onCreate(any(), any(), any(), any())).willAnswer(InvocationArgument.index(3));
-		given(handler.onSuccess(any(), any(), any(), any())).willAnswer(InvocationArgument.index(3));
-		return handler;
 	}
 
 	static class Foo {
@@ -664,7 +637,7 @@ class MapBinderTests {
 
 	static class NestableFoo {
 
-		private final Map<String, NestableFoo> foos = new LinkedHashMap<>();
+		private Map<String, NestableFoo> foos = new LinkedHashMap<>();
 
 		private String value;
 
@@ -716,7 +689,7 @@ class MapBinderTests {
 
 	static class ExampleCustomWithDefaultConstructorBean {
 
-		private final MyCustomWithDefaultConstructorMap items = new MyCustomWithDefaultConstructorMap();
+		private MyCustomWithDefaultConstructorMap items = new MyCustomWithDefaultConstructorMap();
 
 		MyCustomWithDefaultConstructorMap getItems() {
 			return this.items;
@@ -757,25 +730,6 @@ class MapBinderTests {
 
 		void setAddresses(Map<String, ? extends List<? extends InetAddress>> addresses) {
 			this.addresses = addresses;
-		}
-
-	}
-
-	private static final class InvocationArgument<T> implements Answer<T> {
-
-		private final int index;
-
-		private InvocationArgument(int index) {
-			this.index = index;
-		}
-
-		@Override
-		public T answer(InvocationOnMock invocation) throws Throwable {
-			return invocation.getArgument(this.index);
-		}
-
-		private static <T> InvocationArgument<T> index(int index) {
-			return new InvocationArgument<>(index);
 		}
 
 	}
